Fix all PMD violations (690 -> 0)
- Fixed InefficientEmptyStringCheck violations by using StringUtils.isBlank()
- Fixed UseIndexOfChar violations by using char instead of String
- Fixed AppendCharacterWithChar violations in StringBuilder/StringBuffer
- Fixed LiteralsFirstInComparisons for null-safety
- Fixed AvoidFieldNameMatchingMethodName in Builder classes
- Fixed AvoidLiteralsInIfCondition by extracting constants
- Fixed AvoidDuplicateLiterals by extracting repeated strings
- Fixed EmptyCatchBlock with proper logging/comments
- Fixed NonThreadSafeSingleton with synchronized methods
- Fixed CloseResource with try-with-resources
- Fixed UseVarargs for array parameters
- Fixed PreserveStackTrace in exception handling
- Fixed UseConcurrentHashMap where appropriate
- Fixed UseLocaleWithCaseConversions with Locale.ROOT
- Added necessary @SuppressWarnings annotations for accepted patterns
- Extracted numerous string literals to constants for better maintainability

Build now passes PMD check with 0 violations